--- a/src/core/templates/core/login.html
+++ b/src/core/templates/core/login.html
@@ -1,40 +1,86 @@
 {% extends "core/base.html" %}
+
 {% block login %}{% endblock %}
-{% block title %}Log in or sign up{% endblock %}
+{% block headline %}Log in or sign up{% endblock %}
 {% block content %}
-    <div style="float:left; width:50%;">
-        <h4>CREATE A NEW ACCOUNT</h4>
-        <form action="" method="post">
-{#            <input type="text" placeholder="choose a username" name="username"><br>#}
-{#            <input type="password" placeholder="password" name="password1"><br>#}
-{#            <input type="password" placeholder="verify password" name="password2"><br>#}
-{#            <input type="email" placeholder="email" name="email"><br>#}
-{#            <input type="checkbox" id="remember_me" value="remember">#}
-{#            <label for="remember_me">remember me</label><br>#}
-{#            <input type="checkbox" id="email_me_updates" value="email_updates">#}
-{#            <label for="email_me_updates">email me updates</label><br>#}
-{#            <input type="submit" value="SIGN UP">#}
-            {{ signup_form.username }}<br>
-            {{ signup_form.password }}<br>
-            {{ signup_form.email }}<br>
-            {{ signup_form.remember_me }}{{ signup_form.remember_me.label }}<br>
-            {{ signup_form.email_me }}{{ signup_form.email_me.label }}<br>
-            <input type="submit" value="SIGN UP">
+    <div class="row align-content-center">
+        <div class="col-sm-12 col-md-6 align-content-center mb-5">
+            <h4>CREATE A NEW ACCOUNT</h4>
+            <form action="" method="post">
+                {% csrf_token %}
+                {% if signup_form.errors %}
+                    <div class="text-danger">
+                        {{ signup_form.errors }}
+                    </div>
+                {% endif %}
+                <div class="form-group">
+{#                    {{ signup_form.username }}#}
+                    <input class="form-control" type="text" placeholder="username" name="username">
+                </div>
+                <div class="form-group">
+{#                    {{ signup_form.password }}#}
+                    <input class="form-control" type="text" placeholder="password" name="password">
+                </div>
+                <div class="form-group">
+{#                    {{ signup_form.verify_password }}#}
+                    <input class="form-control" type="text" placeholder="verify password" name="verify_password">
+                </div>
+                <div class="form-group">
+{#                    {{ signup_form.email }}#}
+                    <input class="form-control" type="email" placeholder="email" name="email">
+                </div>
+                <div class="form-group form-check">
+{#                    {{ signup_form.remember_me }}{{ signup_form.remember_me.label }}#}
+                    <label class="form-check-label text-muted">
+                        <input class="form-check-input" type="checkbox" value="remember">
+                        remember me
+                    </label>
+                </div>
+                <div class="form-group form-check">
+{#                    {{ signup_form.email_me }}{{ signup_form.email_me.label }}#}
+                    <label class="form-check-label text-muted">
+                        <input class="form-check-input" type="checkbox" value="email_me">
+                        email me updates
+                    </label>
+                </div>
+                <input class= "btn btn-primary float-sm-none float-md-right" type="submit" name="sign_up" value="SIGN UP">
+            </form>
+        </div>
 
-        </form>
-    </div>
-    <div style="float:right; width:50%;">
-        <h4>LOG IN</h4>
-        <form action="" method="post">
-{#            <input type="text" placeholder="username" name="username"><br>#}
-{#            <input type="password" placeholder="password" name="password1"><br>#}
-{#            <input type="checkbox" id="remember_me" value="remember">#}
-{#            <label for="remember_me">remember me</label><br>#}
-            {{ login_form.username }}<br>
-            {{ login_form.password }}<br>
-            {{ signup_form.remember_me }}{{ signup_form.remember_me.label }}<br>
-            <input type="submit" value="LOG IN">
+        <div class="col-sm-12 col-md-6 align-content-center mb-5">
+            <h4>LOG IN</h4>
+            <form action="" method="post">
+                {% csrf_token %}
+                {% if login_form.errors %}
+                    <div class="text-danger">
+                        {{ login_form.errors }}
+                    </div>
+                {% endif %}
+{#                <div class="form-group form-control">#}
+{#                    {{ login_form.username }}#}
+{#                </div>#}
+{#                <div class="form-group">#}
+{#                    {{ login_form.password }}#}
+{#                </div>#}
+{#                <div class="form-group form-check">#}
+{#                    {{ signup_form.remember_me }}{{ signup_form.remember_me.label }}#}
+{#                </div>#}
+                <div class="form-group">
+                    <input class="form-control" type="text" placeholder="username" name="username">
+                </div>
+                <div class="form-group">
+                    <input class="form-control" type="password" placeholder="password" name="password">
+                </div>
+                <div class="form-group form-check">
+                    <label class="form-check-label text-muted">
+                        <input class="form-check-input" type="checkbox" value="remember">
+                            remember me
+                    </label>
+                </div>
+                <input class="btn btn-primary float-sm-none float-md-right" type="submit" name="log_in" value="LOG IN">
 
-        </form>
+            </form>
+        </div>
+
     </div>
 {% endblock %}
