--- a/src/core/templates/core/base.html
+++ b/src/core/templates/core/base.html
@@ -1,27 +1,96 @@
-<html>
-    <head>
-        <p align="right">
-            <a href="{% url "subreddits_list" %}">subreddits</a>
-        </p>
-        {% block header %}
-            <a href="{% url "mainpage" %}">
-                <h1>Riddit</h1>
-            </a>
-        {% endblock %}
-        {%  block login %}
-            <p align="right">
-                <a href="{% url "login" %}">Log in or sign up</a>
-            </p>
-        {% endblock %}
-    </head>
+{% load static %}
 
-    <body>
-        <h2>
-            {% block title %}Main Page{% endblock %}
-        </h2>
+<!doctype html>
+<html lang="en">
 
-        <div id="content">
-            {% block content %}{% endblock %}
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link href="{% static "css/bootstrap.css" %}" rel="stylesheet">
+{#    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">#}
+
+    <!-- CUSTOM STYLESHEET -->
+    <link rel="stylesheet" type="text/css" href="{% static 'core/style.css' %}">
+  </head>
+
+  <body>
+
+    <!-- NAVBAR -->
+    <nav class="navbar navbar-expand-md navbar-light bg-light">
+        <div class="container-fluid">
+{#            <a class="navbar-brand" href="#">Navbar</a>#}
+            <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarNav"><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url "mainpage" %}">Main</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url "subreddits_list" %}">All Subreddits</a>
+                    </li>
+                    {% for subreddit_display in subreddits_display %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url "subreddit" sub_url=subreddit_display.url %}">{{ subreddit_display.name }}</a>
+                        </li>
+                    {% endfor %}
+                </ul>
+            </div>
         </div>
-    </body>
+    </nav>
+
+    <div class="container-fluid">
+
+        <!-- HEADER -->
+        <div class="row">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+                <div class="jumbotron jumbotron-welcome">
+                    <div class="flexFont">
+                        <h1>
+                            {% block headline %}Main{% endblock %}
+                        </h1>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- LOG SECTION -->
+        {%  block login %}
+            {% if user.is_authenticated %}
+                <p align="right">
+                    You are logged in as {{ user.username }}
+                    <a class="btn btn-sm btn-light" href="{% url "logout" %}?previous={{ request.path }}">Log out</a>
+                </p>
+            {% else %}
+                <p align="right">
+                    <a class="btn btn-sm btn-light" href="{% url "login" %}?next={{ request.path }}">Log in or sign up</a>
+                </p>
+            {% endif %}
+        {% endblock %}
+    </div>
+
+    <div class="container-fluid">
+        <div class="container">
+            {% block title %}{% endblock %}
+        </div>
+
+        <div class="container">
+            {% block content %}
+            {% endblock %}
+        </div>
+    </div>
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <!-- DON'T USE JQUERY SLIM VERSION!!! -->
+{#    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>#}
+    <script src="{% static 'core/jquery-3.3.1.js' %}"></script>
+{#    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>#}
+    <script src="{% static 'core/js/bootstrap.js' %}"></script>
+    {#    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>#}
+    <script src="{% static 'core/js/typeahead.bundle.js' %}"></script>
+    <script src="{% static 'core/core.js' %}"></script>
+  </body>
 </html>
