--- a/src/core/static/core/style.css
+++ b/src/core/static/core/style.css
@@ -1,5 +1,9 @@
+.h1-main {
+    font-family: "Courier New";
+}
+
 .jumbotron-welcome {
-    background-color: #CDE6FF;
+    background-color: #FFBF80;
     color: white;
 }
 
