--- a/src/core/templates/core/base.html
+++ b/src/core/templates/core/base.html
@@ -48,8 +48,8 @@
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
                 <div class="jumbotron jumbotron-welcome">
                     <div class="flexFont">
-                        <h1>
-                            {% block headline %}Main{% endblock %}
+                        <h1 class="h1-main">
+                            {% block headline %}Riddit{% endblock %}
                         </h1>
                     </div>
                 </div>
